bugfix: changing parc did not clear region (#643)
bugfix: change parc should dismiss version menu
chore: minor ui tweaks: overlapping chips
chore: Explore btn now match style to region
chore: remove unused imports

--- a/src/res/css/extra_styles.css
+++ b/src/res/css/extra_styles.css
@@ -493,6 +493,10 @@ markdown-dom pre code
 {
   z-index: 1!important;
 }
+.z-index-2
+{
+  z-index: 2!important;
+}
 .z-index-6
 {
   z-index: 6!important;
